..F....... [ZBX-10318] added disabling of [-] or [+] buttons when screen column or row cannot be removed or added (Sasha)

Bug fixes:
........S. [ZBX-10510] fixed action condition time period checking (viktors)
A......... [ZBX-10155] prohibited creation of a trigger prototype without item prototypes in the expression (Cemeris, Sasha)
.......P.. [ZBX-6744] fixed "expression tree is too large (maximum depth 1000)" error when using SQLite3 in a large environment (Sasha)
...G...PS. [ZBX-10530] fixed trappers and agent listeners accepting connections without a timeout (asaveljevs)
..F....... [ZBX-10570] fixed incorrect select input height in FF (Pavel)
..F....... [ZBX-10413] improved XML import validation (Oleg, Sasha)
...GI..PS. [ZBX-4148] separated third-party library CFLAGS to avoid header file name conflicts (gleb)
..F....... [ZBX-9968] fixed monitoring discovery and monitoring map data refresh (Gunars)
..F....... [ZBX-9820] fixed overview of items and triggers with same name and multiple hosts (Gunars, Sasha)
..F....... [ZBX-10466] fixed event selection by trigger ID (Gunars)
..F....... [ZBX-7422] fixed LLD discovery rule list showing 0 instead of blank space in interval column for trapper and SNMP trap items (Ivo)
A.F....... [ZBX-10316] fixed the regular expression preventing from adding web scenario steps (Ivo)
.......P.. [ZBX-10497] fixed proxy crash when processing metadata updates of log[] or logrt[] items (Sandis)
.......PS. [ZBX-10257] changed VMware items to become not supported if no VMware collector processes are started (viktors)
A......... [ZBX-10262] fixed item.update modifying "delta" field for a templated item (Ivo)
A......... [ZBX-10318,ZBX-10517] added validation of vsize and hsize parameters in screen.create() and screen.update() methods (Sasha)
A......... [ZBX-10318,ZBX-10517] fixed validation of screen elements position in screen.create() and screen.update() methods (Sasha)