@@ -258,7 +258,7 @@ int	VFS_FILE_REGEXP(AGENT_REQUEST *request, AGENT_RESULT *result)
 	char		*filename, *regexp, encoding[32], *output, *start_line_str, *end_line_str;
 	char		buf[MAX_BUFFER_LEN], *utf8, *tmp, *ptr;
 	int		nbytes, f = -1, ret = SYSINFO_RET_FAIL;
-	uint32_t	start_line, end_line, current_line = 0;
+	zbx_uint32_t	start_line, end_line, current_line = 0;
 	double		ts;
 
 	ts = zbx_time();
@@ -379,7 +379,7 @@ int	VFS_FILE_REGMATCH(AGENT_REQUEST *request, AGENT_RESULT *result)
 	char		*filename, *regexp, *tmp, encoding[32];
 	char		buf[MAX_BUFFER_LEN], *utf8, *start_line_str, *end_line_str;
 	int		nbytes, len, res, f = -1, ret = SYSINFO_RET_FAIL;
-	uint32_t	start_line, end_line, current_line = 0;
+	zbx_uint32_t	start_line, end_line, current_line = 0;
 	double		ts;
 
 	ts = zbx_time();
@@ -631,7 +631,7 @@ int	VFS_FILE_CKSUM(AGENT_REQUEST *request, AGENT_RESULT *result)
 {
 	char		*filename;
 	int		i, nr, f = -1, ret = SYSINFO_RET_FAIL;
-	uint32_t	crc, flen;
+	zbx_uint32_t	crc, flen;
 	u_char		buf[16 * ZBX_KIBIBYTE];
 	u_long		cval;
 	double		ts;
