@@ -1363,7 +1363,7 @@ int	parse_ipmi_command(const char *command, char *c_name, int *val, char *error,
 		*val = 1;
 	else if (0 == strcasecmp(p, "off"))
 		*val = 0;
-	else if (SUCCEED != is_uint31(p, (uint32_t *)val))
+	else if (SUCCEED != is_uint31(p, val))
 	{
 		zbx_snprintf(error, max_error_len, "IPMI command value is not supported [%s]", p);
 		goto fail;
